# ME-597AS_Lab

./: .gitignore  README.md  task7_A
Lab2_ws/src/task_3/: package.xml  setup.py
Lab2_ws/src/task_3/task_3/: distance_pid.py
task_7/: package.xml  setup.cfg  setup.py
task_7/launch/: gen_sync_map.launch.py
task_7_ws/bag/task_7/: metadata.yaml  task_7_0.db3
task_7_ws/task_7/: setup.py
task_7_ws/task_7/launch/: gen_sync_map.launch.py  navigator.launch.py
task_7_ws/task_7/maps/: classroom_map.yaml
task_7_ws/task_7/task_7/: auto_navigator.py
