<?xml version="1.0"?>
<package format="3">
  <name>task_7</name>
  <version>0.0.1</version>
  <description>Task 7 package to generate synchronized maps using SLAM and visualize it in Rviz2.</description>

  <maintainer email="song828@purdue.edu">Song Yuchen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>turtlebot4_navigation</exec_depend>
  <exec_depend>turtlebot4_viz</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
